# C_Exercises

./: CMakeLists.txt  README.md  chapter4.c  chapter4.h  chapter4_calculator.c  chapter4_calculator.h  chapter5.c  chapter5.h  chapter6.c  chapter6.h  chapter6_ex2.c  chapter6_ex2.h  chapter6_util.c  chapter6_util.h  chapter8.c  chapter8.h  chapter_3.c  chapter_3.h  chapter_6-3&4.c  chapter_6-3&4.h  chapter_6.c  chapter_6.h  dynamic_array.c  dynamic_array.h  main.c  main.h
Bit-Related exercises/: basic_operations_bit.c  basic_operations_bit.h  bitCount.c  bitCount.h  invert.c  invert.h  rightRot.c  rightRot.h  setbits.c  setbits.h
Char-related exercises/: lower.c  lower.h
DataStructures/: DoublyLinkedList.c  DoublyLinkedList.h  HashMap.c  RBTree.c  RBTree.h  hashmap.c  hashmap.h  set.c  set.h
DoublyLinkedList/: DoublyLinkedList.c  DoublyLinkedList.h
